[gd_scene load_steps=10 format=3 uid="uid://lfosnrhxij5g"]

[ext_resource type="Script" path="res://nodes/scripts/Spawner.gd" id="1_hsovv"]
[ext_resource type="Texture2D" uid="uid://cssbh866nqskl" path="res://assets/star.png" id="2_knx7h"]
[ext_resource type="Script" path="res://nodes/scripts/Label.gd" id="3_bq2u0"]
[ext_resource type="Texture2D" uid="uid://bp62txldj4iq3" path="res://assets/effect_yellow.png" id="4_6trps"]

[sub_resource type="Gradient" id="Gradient_enwj2"]
offsets = PackedFloat32Array(0, 0.530864, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dcqy3"]
gradient = SubResource("Gradient_enwj2")

[sub_resource type="Curve" id="Curve_3xljr"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.767857, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.431579), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_jkrtm"]
curve = SubResource("Curve_3xljr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kn4mv"]
emission_shape = 3
emission_box_extents = Vector3(2048, 1020, 1)
particle_flag_disable_z = true
gravity = Vector3(1, 1, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_jkrtm")
color_ramp = SubResource("GradientTexture1D_dcqy3")

[node name="Node2D" type="Node2D"]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 256
process_material = SubResource("ParticleProcessMaterial_kn4mv")
texture = ExtResource("2_knx7h")
lifetime = 10.0
local_coords = true

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("1_hsovv")

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1156.0
offset_bottom = 642.0

[node name="Label" type="Label" parent="UI"]
layout_mode = 2
offset_left = -3.0
offset_top = 10.0
offset_right = 109.0
offset_bottom = 36.0
text = "0 Gold"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_bq2u0")
gold = 1000

[node name="Multiplier" type="Button" parent="UI"]
layout_mode = 2
offset_top = 611.0
offset_right = 93.0
offset_bottom = 642.0
text = "Multiplier+"

[node name="Charge" type="Button" parent="UI"]
layout_mode = 2
offset_left = 102.0
offset_top = 612.0
offset_right = 174.0
offset_bottom = 643.0
text = "Charge+"

[node name="Magnet" type="Button" parent="UI"]
layout_mode = 2
offset_left = 186.0
offset_top = 611.0
offset_right = 262.0
offset_bottom = 642.0
text = "Magnet+"

[node name="ProgressBar" type="ProgressBar" parent="UI"]
layout_mode = 2
offset_left = 1068.0
offset_top = 351.0
offset_right = 1135.0
offset_bottom = 623.0
max_value = 3.0
fill_mode = 3
show_percentage = false

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI"]
visible = false
layout_mode = 0
offset_left = 966.0
offset_top = 354.0
offset_right = 1047.0
offset_bottom = 623.0
max_value = 3.0
fill_mode = 3
texture_progress = ExtResource("4_6trps")

[connection signal="goldIncrease" from="Spawner" to="UI/Label" method="_on_spawner_gold_increase"]
[connection signal="chargeEnd" from="UI/Label" to="Spawner" method="_on_label_charge_end"]
[connection signal="pressed" from="UI/Multiplier" to="UI/Label" method="_on_multiplier_pressed"]
[connection signal="pressed" from="UI/Charge" to="Spawner" method="_on_charge_pressed"]
[connection signal="pressed" from="UI/Magnet" to="Spawner" method="_on_magnet_pressed"]
